<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/milk">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/custom_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/milk"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="4dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_arrow_back"
                    app:layout_constraintBottom_toBottomOf="@+id/newNodeTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/newNodeTitle" />

                <TextView
                    android:id="@+id/newNodeTitle"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/new_note_title"

                    android:textColor="@color/dark_grey"
                    android:textSize="32sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/spinner"
                    app:layout_constraintStart_toEndOf="@+id/backButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="16dp"
                    android:transitionName="color"
                    android:backgroundTint="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/newNodeTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/newNodeTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/layout_round_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/custom_toolbar_layout">

                <EditText
                    android:id="@+id/edittext"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="8dp"
                    android:background="@null"
                    android:ems="10"
                    android:transitionName="title"
                    android:fontFamily="@font/roboto"
                    android:gravity="start|top"
                    android:hint="@string/edittext_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine|textNoSuggestions|textVisiblePassword"
                    android:padding="18dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    app:layout_constraintBottom_toTopOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/dark_grey"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageButton
                        android:id="@+id/btn_bold"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/bold_typeface"
                        android:src="@drawable/ic_format_bold" />

                    <View
                        android:id="@+id/view1"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:background="@color/dark_divider" />

                    <ImageButton
                        android:id="@+id/btn_italic"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/italic_typeface"
                        android:src="@drawable/ic_format_italic" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:background="@color/dark_divider" />

                    <ImageButton
                        android:id="@+id/btn_underlined"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/underlined_font"
                        android:src="@drawable/ic_format_underlined" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:background="@color/dark_divider" />

                    <ImageButton
                        android:id="@+id/btn_strike_through"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/strikeThrough_font"
                        android:src="@drawable/ic_strikethrough" />

                    <View
                        android:id="@+id/view4"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:background="@color/dark_divider" />

                    <ImageView
                        android:id="@+id/btn_list_bullet"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/bullet_list_font"
                        android:padding="12dp"
                        android:src="@drawable/ic_list" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:transitionName="fab"
            android:layout_marginBottom="64dp"
            android:backgroundTint="@color/dark_grey"
            android:src="@drawable/ic_done"
            app:tint="@color/white"
            app:layout_anchor="@id/edittext"
            app:layout_anchorGravity="bottom|end" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>